Don't paint the cards which have a comma in them.
Make Add/Edit Layout scrollable.